Fixed table into html

--- a/web-scraping-challenge/Missions_to_Mars/templates/index.html
+++ b/web-scraping-challenge/Missions_to_Mars/templates/index.html
@@ -45,56 +45,7 @@
     <div class="table">
       <div class="col-md-12">
         <h3>Mars Facts</h3>
-        <table border="1" class="dataframe table-sm">
-          <thead>
-            <tr style="text-align: right;">
-              <th></th>
-              <th>value</th>
-            </tr>
-            <tr>
-              <th>description</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th>Equatorial Diameter:</th>
-              <td>6,792 km</td>
-            </tr>
-            <tr>
-              <th>Polar Diameter:</th>
-              <td>6,752 km</td>
-            </tr>
-            <tr>
-              <th>Mass:</th>
-              <td>6.39 × 10^23 kg (0.11 Earths)</td>
-            </tr>
-            <tr>
-              <th>Moons:</th>
-              <td>2 (Phobos &amp; Deimos)</td>
-            </tr>
-            <tr>
-              <th>Orbit Distance:</th>
-              <td>227,943,824 km (1.38 AU)</td>
-            </tr>
-            <tr>
-              <th>Orbit Period:</th>
-              <td>687 days (1.9 years)</td>
-            </tr>
-            <tr>
-              <th>Surface Temperature:</th>
-              <td>-87 to -5 °C</td>
-            </tr>
-            <tr>
-              <th>First Record:</th>
-              <td>2nd millennium BC</td>
-            </tr>
-            <tr>
-              <th>Recorded By:</th>
-              <td>Egyptian astronomers</td>
-            </tr>
-          </tbody>
-        </table>
+        {{data.html_table|safe}}
       </div>
     </div>
     <div class="row justify-content-around">
@@ -104,7 +55,7 @@
           <hr class="my-3">
           {% for i in data.hemisphere_image_urls %}
           <a href="{{i.img_url}}">
-            <img src="{{i.img_url}}" class="img-responsive" alt="{{i.title}}" width="350" height="350">
+            <img src="{{i.img_url}}" class="img-fluid img-responsive" alt="{{i.title}}" width="350" height="350">
           </a>
           <h5>{{i.title}}</h5>
           {% endfor %}
